--- a/_includes/style.textile
+++ b/_includes/style.textile
@@ -1,2 +1,2 @@
-<link href="/assets/stylesheets/helium.css" rel="stylesheet" type="text/css">
+<link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="/assets/stylesheets/style.css" rel="stylesheet" type="text/css">
