--- a/_posts/2019-12-31-best-articles-2019.md
+++ b/_posts/2019-12-31-best-articles-2019.md
@@ -18,7 +18,7 @@ this year.
 - [Fibers Are the Right Solution](https://www.codeotaku.com/journal/2018-11/fibers-are-the-right-solution/index)
 - [Bug report template](https://birdeatsbug.com/blog/bug-report-template)
 - [V language](https://github.com/vlang/v)
-- [HTTPX gem](https://gitlab.com/honeyryderchuck/httpx#httpx-a-ruby-http-library-for-tomorrow-and-beyond)
+- [HTTPX gem](https://gitlab.com/honeyryderchuck/httpx)
 - [Vulcain HTTP2 Server push](https://github.com/dunglas/vulcain)
 - [Facebook code analysis tools](https://github.com/facebookarchive/pfff)
 - [3 steps to improving your GitHub-experience](https://opensource.christmas/2019/7)
@@ -28,17 +28,17 @@ this year.
 ## Security
 - [Exploiting Chrome V8: Krautflare (35C3 CTF 2018)](https://www.jaybosamiya.com/blog/2019/01/02/krautflare/)
 - [How to block online ads with the hosts file](https://debugandrelease.blogspot.com/2019/01/how-to-block-online-ads-with-hosts-file.html)
-- [Criminals Are Tapping Into the Phone Network Backbone to Empty Bank Accounts](https://tech.slashdot.org/story/19/01/31/1925241/criminals-are-tapping-into-the-phone-network-backbone-to-empty-bank-accounts?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
-- [Academics Improve SHA-1 Collision Attack, Make It Actually Dangerous](https://it.slashdot.org/story/19/05/13/2255229/academics-improve-sha-1-collision-attack-make-it-actually-dangerous?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
+- [Criminals Are Tapping Into the Phone Network Backbone to Empty Bank Accounts](https://tech.slashdot.org/story/19/01/31/1925241/criminals-are-tapping-into-the-phone-network-backbone-to-empty-bank-accounts)
+- [Academics Improve SHA-1 Collision Attack, Make It Actually Dangerous](https://it.slashdot.org/story/19/05/13/2255229/academics-improve-sha-1-collision-attack-make-it-actually-dangerous)
 - [strong_password v0.0.7 rubygem hijacked](https://withatwist.dev/strong-password-rubygem-hijacked.html)
-- [EFF Hits AT&T With Class-Action Lawsuit For Selling Customers' Location To Bounty Hunters](https://yro.slashdot.org/story/19/07/18/2149220/eff-hits-att-with-class-action-lawsuit-for-selling-customers-location-to-bounty-hunters?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
-- [lorida's DMV Made $77 Million -- By Selling Off Personal Information ](https://yro.slashdot.org/story/19/07/13/218255/floridas-dmv-made-77-million----by-selling-off-personal-information?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
+- [EFF Hits AT&T With Class-Action Lawsuit For Selling Customers' Location To Bounty Hunters](https://yro.slashdot.org/story/19/07/18/2149220/eff-hits-att-with-class-action-lawsuit-for-selling-customers-location-to-bounty-hunters)
+- [lorida's DMV Made $77 Million -- By Selling Off Personal Information ](https://yro.slashdot.org/story/19/07/13/218255/floridas-dmv-made-77-million----by-selling-off-personal-information)
 - [Kazakhstan government is now intercepting all HTTPS traffic](https://www.zdnet.com/article/kazakhstan-government-is-now-intercepting-all-https-traffic/)
 - [Understanding Docker container escapes](https://blog.trailofbits.com/2019/07/19/understanding-docker-container-escapes/)
-- [FTC Says 'You Will Be Disappointed' if You Choose $125 For Equifax Payout](https://yro.slashdot.org/story/19/07/31/1920221/ftc-says-you-will-be-disappointed-if-you-choose-125-for-equifax-payout?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
+- [FTC Says 'You Will Be Disappointed' if You Choose $125 For Equifax Payout](https://yro.slashdot.org/story/19/07/31/1920221/ftc-says-you-will-be-disappointed-if-you-choose-125-for-equifax-payout)
 - [Opt out of all the data sharing you wouldn't opt in to.](https://simpleoptout.com/)
 - [Security flaws caused by compiler optimizations](https://www.redhat.com/en/blog/security-flaws-caused-compiler-optimizations)
-- [Backdoor Code Found In 11 Ruby Libraries](https://yro.slashdot.org/story/19/08/22/017228/backdoor-code-found-in-11-ruby-libraries?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
+- [Backdoor Code Found In 11 Ruby Libraries](https://yro.slashdot.org/story/19/08/22/017228/backdoor-code-found-in-11-ruby-libraries)
 - [A Potential Privacy Model for the Web](https://github.com/michaelkleber/privacy-model)
 - [Logs were our lifeblood. Now they're our liability.](https://vicki.substack.com/p/logs-were-our-lifeblood-now-theyre)
 - [What we know about you when you click on this article](https://www.vox.com/recode/2019/12/10/20962868/vox-media-privacy-policy-explained-what-we-know-about-you)
@@ -51,11 +51,11 @@ this year.
 - [The Ethics of Web Performance](https://timkadlec.com/remembers/2019-01-09-the-ethics-of-performance/))
 - [Time to First Byte: What It Is and Why It Matters](https://csswizardry.com/2019/08/time-to-first-byte-what-it-is-and-why-it-matters/)
 - [CSRF is (really) dead](https://scotthelme.co.uk/csrf-is-really-dead/)
-- [The cost of JavaScript in 2019](https://v8.dev/blog/cost-of-javascript-2019#json)
+- [The cost of JavaScript in 2019](https://v8.dev/blog/cost-of-javascript-2019)
 - [Announcing the Bytecode Alliance: Building a secure by default, composable future for WebAssembly](https://hacks.mozilla.org/2019/11/announcing-the-bytecode-alliance/)
 - [Tim Berners-Lee unveils global plan to save the web](https://www.theguardian.com/technology/2019/nov/24/tim-berners-lee-unveils-global-plan-to-save-the-internet)
 - [Firefox Replay](https://firefox-replay.com/)
-- [WebAssembly Becomes W3C Standard, Reaches 1.0](https://developers.slashdot.org/story/19/12/15/1547257/webassembly-becomes-w3c-standard-reaches-10?utm_source=feedly1.0mainlinkanon&utm_medium=feed)
+- [WebAssembly Becomes W3C Standard, Reaches 1.0](https://developers.slashdot.org/story/19/12/15/1547257/webassembly-becomes-w3c-standard-reaches-10)
 
 ## Databases
 - [PostgreSQL vs. fsync: How is it possible that PostgreSQL used fsync incorrectly for 20 years, and what we'll do about it.](https://archive.fosdem.org/2019/schedule/event/postgresql_fsync/)
@@ -70,7 +70,7 @@ this year.
 - [Why Reverse Mentoring Works and How to Do It Right](https://hbr.org/2019/10/why-reverse-mentoring-works-and-how-to-do-it-right)
 - [An Engineering Team where Everyone is a Leader](https://blog.pragmaticengineer.com/a-team-where-everyone-is-a-leader/)
 - [Only 15% of the Basecamp operations budget is spent on Ruby](https://m.signalvnoise.com/only-15-of-the-basecamp-operations-budget-is-spent-on-ruby/)
-- [The Real Reasons Why Job Seekers Are Not Given Feedback](https://www.forbes.com/sites/jackkelly/2019/12/02/the-real-reasons-why-job-seekers-are-not-given-feedback/#1f7f3652adf1)
+- [The Real Reasons Why Job Seekers Are Not Given Feedback](https://www.forbes.com/sites/jackkelly/2019/12/02/the-real-reasons-why-job-seekers-are-not-given-feedback/)
 
 ## Leading
 - [What a Senior Staff Software Engineer Actually Does](https://medium.com/box-tech-blog/what-a-senior-staff-software-engineer-actually-does-f3fc140d5f33)
