Powerful: fix grammar

--- a/_posts/2020-01-09-powerful.md
+++ b/_posts/2020-01-09-powerful.md
@@ -7,93 +7,91 @@ type: book_review
 ---
 
 Patty McCord reasons that you should avoid giving your employees the impression
-that your company is a family since it is a business and will have to act in its
-interest. You hire adults, treat them as adults by giving them the tools and
-information they need to perform amazing work.
+that your company is a family. Your company is a business and will have to act
+in its interest. You hire adults, treat them as adults by giving them the tools
+and information they need to perform amazing work.
 
 ## Hiring
 
 You can gain an advantage over competitors by hiring better candidates more
 efficiently. You will need to build this expertise within your company. Form an
-internal team to head hunt for the roles your business needs.  Don't let your
-managers work with external recruiters as this will block your head hunting team
+internal team to headhunt for the roles your business needs. Don’t let your
+managers work with external recruiters, as this will block your headhunting team
 from developing into the competitive advantage that you need them to be.
 
 The most important job of management is to build great teams. Over time your
-company, products and features will require different expertise than you
-currently have. Let this future inform today's hiring decisions. You should be
+company, products, and features will require different expertise than you
+currently have. Let this future inform today’s hiring decisions. You should be
 confident that your hires can and want to achieve this future. Know when you
-don't need a role any more and respectfully let that employee go if they do not
-currently have the skills to succeed in another needed role.
+don’t need a role anymore and respectfully let that employee go if they do not
+currently have the skills to succeed in another required role.
 
-You should know what roles within your company have the greatest potential to
-boost performance. Be ready to pay top of market for these positions to attract
-and retain the best people for these roles. When filling these positions you
-often will have to hire externally for the necessary expertise.
+You should know what roles within your company have the highest potential to
+boost performance. Be ready to pay top of the market for these positions to
+attract and retain the best people for these roles. When filling these
+positions, you often will have to hire externally for the necessary expertise.
 
 Understand why a person wishes to join your company. You want people that want
 to craft a delightful customer experience and who are passionate about your
-product. If a candidate wants to think freely about cool ideas then Google would
-be a better fit for that person.
-
+product. If a candidate wants to think freely about cool ideas, then Google
+would be a better fit for that person.
 
 ## People
 
-A leader's job is to create great teams that do great work. Remind people that
-they walk in the door with power. As a leader, set up the conditions that allows
-them to exercise that power.
+A leader’s job is to create great teams that do great work. Remind people that
+they walk in the door with power. Set up the conditions that allow your people
+to exercise that power.
 
 ### Well informed
 
-Information should be widely distributed and expectations should be clear.
+Information should be widely distributed, and expectations should be clear.
 Employees at all levels can have valuable ideas and ask enlightening questions.
 Never underestimate this. You should periodically probe employees of all levels
 to measure how well they understand a concept that is important to your
 business. Spend the necessary time with them to ensure they have the information
 and opportunity to contribute their perspectives.
 
-McCord calls out how we handicap our organizations by being "data driven". She
-specifically is concerned that data can be collected and analyzed in ways that
-support pre-drawn conclusions. Instead she recommends really thinking about the
-data and the process of collecting the data and using the judgement of a diverse
-set of employees to debate the correct interpretation of the data. Be ready to
-re-debate issues when necessary. Be data informed and fact driven. 
+McCord calls out how we handicap our organizations by being “data-driven”. She
+is wary of the collection and analysis of data in ways that support pre-drawn
+conclusions. Instead, she recommends deeply thinking about the data and the
+process of collecting the data and using the judgment of a diverse set of
+employees to debate the correct interpretation of the data. Be ready to
+re-debate issues when necessary. Be data-informed and fact-driven.
 
 ### Managing
 
-Focus your high performers on the areas of business where they can have the
-largest impact on company performance. Nearly all critical roles at your company
-should be filled by top talent. You should be ready to offer top-of-market
-salaries for these key positions.
+Focus your high performers on the areas of business where they can have the most
+significant impact on company performance. Nearly all critical roles at your
+company should be filled by top talent. You should be ready to offer
+top-of-market salaries for these critical positions.
 
 Build accountability into your organizational structures. You need to know when
 someone is or is not succeeding in their role. Having the wrong structures will
-slow you down in knowing when teams and people are not succeeding. This often
-comes up in committees where no one champions the decision-making process.
+diminish your ability to recognize when teams and people are not succeeding.
+This often comes up in committees where no one champions the decision-making
+process.
 
 It is common to run A/B tests to develop your product. McCord suggests that you
-can improve your organization's management practices and team structures by
-developing a process to experiment, collect feedback and debate the results.
+can improve your organization’s management practices and team structures by
+developing a process to experiment, collect feedback, and debate the results.
 
-McCord's most stand-out recommendation is for you to encourage your people to
+McCord’s most stand-out recommendation is for you to encourage your people to
 interview outside your company regularly. This serves two purposes, you get
-information on how much the market is paying for each role and you get to retain
-employees who share the vision you have for your company. You need to be ready
-to counter offers for your most important roles. The goal of this recommendation
-is to ensure you have the right people doing the right work.
+information on how much the market is paying for each role, and you get to
+retain employees who share the vision you have for your company. You need to be
+ready to counter offers for your most important roles. The goal of this
+recommendation is to ensure you have the right people doing the right work.
 
 ## Culture
 
-Culture is not having snacks in a kitchen, grabbing beers after work or
+Culture is not having snacks in a kitchen, grabbing beers after work, or
 receiving the latest perk. Culture is the collection of values and practices by
-which employees interact and derive benefits for themselves, each other and the
+which employees interact and derive benefits for themselves, each other, and the
 company.
 
-A culture can be built around excellence. This can double as a perk since
-working with high performing teammates is the best perk that an employee can ask
-for.
+A culture can be built around excellence. Working with high-performing teammates
+is one of the best perks an employee can receive.
 
 Be thoughtful when considering cultural fit during the hiring process. McCord
-points out that culture fit is a two way street: people can adapt to
-organizations and organizations can adapt to people.
-
+points out that culture fit is a two-way street: people can adapt to
+organizations, and organizations can adapt to people.
